# cas_pratique

./: README.md  pyproject.toml
prat/: .gitignore  app.py
prat/services/: img_processing.py  yolo_service.py
prat/test/: test_cnn.py
tests/: test_prat.py
