[tool.poetry]
name = "prat"
version = "0.1.0"
description = ""
authors = ["Bap_Le_Goff <baptiste_legoff@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.11.0"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
Pillow = "^9.1.0"
PyYAML = "^6.0"
requests = "^2.27.1"
scipy = "1.4.1"
torchvision = "^0.12.0"
tqdm = "^4.64.0"
tensorboard = "^2.8.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
streamlit = "1.4"
scikit-image = "^0.19.2"
click = "8.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
